--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               {
                 "glob": "**/*",
                 "input": "./node_modules/leaflet/dist/images",
-                "output": "leaflet/"
+                "output": "assets"
               },
               {
                 "glob": "**/*",
