--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/pwa": "^0.802.1",
     "@angular/router": "~8.1.2",
     "@angular/service-worker": "~8.1.2",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@capacitor/cli": "^1.1.1",
     "@capacitor/core": "^1.1.1",
     "@ionic-native/core": "^5.0.0",
@@ -47,6 +48,7 @@
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.1",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
