--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/pwa-elements": "^1.3.0",
     "core-js": "^2.5.4",
+    "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.5.1",
+    "node-waf": "^1.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -48,6 +50,7 @@
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/leaflet": "^1.5.1",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
